--- a/assets/css/1001-estilos.css
+++ b/assets/css/1001-estilos.css
@@ -72,6 +72,33 @@
 }
 
 
+/* Estilo de cada hexagono de problema */
+.problema-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  text-align: center;
+  text-decoration: none;
+  position: relative;
+}
+
+.overlay-num {
+  position: absolute;
+  bottom: 0.5rem;
+  background-color: rgba(0, 0, 0, 0.7);
+  padding: 0.2rem 0.6rem;
+  border-radius: 0.4rem;
+  color: white;
+  font-size: 0.9rem;
+  font-weight: 600;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.problema-link:hover .overlay-num {
+  opacity: 1;
+}
 
 
 
