--- a/assets/css/listado-problemas.css
+++ b/assets/css/listado-problemas.css
@@ -40,14 +40,34 @@
   text-decoration: none;
 }
   
+@keyframes show {
+  from {
+    opacity: 0;
+    scale: 25%;
+  }
+
+  to {
+    opacity: 1;
+    scale: 100%;
+  }
+}
+
+
 .problema-img {
+  view-timeline-name: --image;
+  view-timeline-axis: block;
+  animation-timeline: --image;
+  animation-name: show;
+  
+  animation-range: entry 25% cover 50%;
+  animation-fill-mode: both;
+
   width: 100%;
   aspect-ratio: 150 / 173.2;
   object-fit: cover;
   display: block;
   clip-path: inherit;
 }
-
 
 .overlay-num {
   position: absolute;
