--- a/assets/css/listado-problemas.css
+++ b/assets/css/listado-problemas.css
@@ -1,6 +1,7 @@
 
 .grid-problemas {
   display: flex;
+  min-height: 500px;
   flex-wrap: wrap;
   justify-content: center;
   gap: 1rem;
@@ -13,6 +14,7 @@
 }
 
 .problema-item {
+  will-change: transform;
   opacity: 0;
   animation-name: fadeIn;
   animation-timeline: view();
@@ -55,6 +57,9 @@
 
 .overlay-num {
   position: absolute;
+  top: 10px;
+  left: 10px;
+  min-height: 2rem;
   background-color: #ffffffcf;
   padding: 0.2rem 0.6rem;
   border-radius: 0.4rem;
