--- a/assets/css/evaluador.css
+++ b/assets/css/evaluador.css
@@ -52,7 +52,8 @@ body.evaluador-body {
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1); /* Sombra interior sutil */
     resize: none;
     min-height: min-content;
-    field-sizing: content
+    field-sizing: content;
+    min-width: -webkit-fill-available;
 }
 
 .evaluador-form-group textarea:focus {
