--- a/assets/css/1001-estilos.css
+++ b/assets/css/1001-estilos.css
@@ -143,6 +143,7 @@ dialog#modal-construccion {
   width: auto;
   margin: auto;
   z-index: 1000;
+  overflow: hidden;
 }
 
 dialog[open]#modal-construccion {
@@ -152,8 +153,10 @@ dialog[open]#modal-construccion {
 
 #modal-construccion img {
   width: 100%;
-  height: auto;
-  border-radius: 10px;
+    max-height: 90vh; /* Evita que se salga de pantalla */
+    object-fit: contain;
+    border-radius: 10px;
+    display: block;
 }
 
 #modal-construccion form {
@@ -161,17 +164,8 @@ dialog[open]#modal-construccion {
   margin-top: -1rem;
 }
 
-#modal-construccion button {
-  padding: 0.5rem 1rem;
-  margin-top: 0.5rem;
-  background-color: #4a6da7;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 1rem;
-}
-
-#modal-construccion button:hover {
-  opacity: 0.9;
+/* Fondo difuminado + oscuro con blur */
+dialog::backdrop {
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8));
+  backdrop-filter: blur(5px);
 }
