--- a/assets/css/1001-estilos.css
+++ b/assets/css/1001-estilos.css
@@ -246,3 +246,10 @@ dialog::backdrop {
   overflow-x: auto;
   box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
 }
+
+
+@media only screen and (prefers-color-scheme: dark) {
+  :host(:not([data-theme])),:root:not([data-theme]) {
+    --pico-background-color: #fff !important;  
+  }
+}
